Bug 402239 - bookmarks dropped from toolbar folder
Summary: bookmarks dropped from toolbar folder
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: RedHat Enterprise Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-17 12:34 UTC by Tiger Nassau
Modified: 2019-03-14 10:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tiger Nassau 2018-12-17 12:34:28 UTC
SUMMARY


STEPS TO REPRODUCE
1. create bookmark toolbar folders
2. add bookmarks to folders 
3. revisit browser 

OBSERVED RESULT
an individual bookmark will disappear 


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION

we have 2-15 bookmarks in each folder - is there a limit on how many bookmarks can be in a folder ?
Comment 1 David Rosca 2018-12-24 12:26:39 UTC
No, there is no limit of how many bookmarks can be in folder.
Comment 2 David Rosca 2018-12-24 12:28:47 UTC
I can't reproduce the issue, can you please post exact steps?
Comment 3 Tiger Nassau 2019-03-07 15:08:41 UTC
okay, found the bug - if I change something in the url without clearing 
the url - the bookmark star remains filled but referring to the previous 
url - thus deleting it to create a new one drops the former.

example:  if we have a bookmark for https://reddit.com/r/linux/new and 
go to the url address bar and delete linux and type in kde and hit enter 
- it will display the kde page and the bookmark star is filled so we 
cannot save the new bookmark and if click the star and choose to delete 
the bookmark - it deletes the linux bookmark.  But if we clear the url 
address bar and type in https://reddit.com/r/kde/new - the page appears 
and the bookmark star is empty we can save the new bookmark without any 
other deletions

actually the bookmark process is cumbersome and needs a big revision - 
to bookmark a page to an existing toolbar folder requires clicking on 
the star - then instead of getting a choice of toolbar with existing 
folders, have to click on "unsupported bookmarks" then hover over 
"toolbar" then hover over "desired folder" then click on "choose folder" 
then go back to dropdown and click "add bookmark" - cumbersome

should be click the star - get a dropdown show toolbar, misc, 
unsupported, ... either click or hover over toolbar which should 
dropdown a list of the folders, then clicking on desired folder => 
bookmark saved

john


On 12/24/2018 07:28 AM, David Rosca wrote:
> https://bugs.kde.org/show_bug.cgi?id=402239
>
> --- Comment #2 from David Rosca <nowrep@gmail.com> ---
> I can't reproduce the issue, can you please post exact steps?
>
Comment 4 David Rosca 2019-03-14 10:37:53 UTC
Git commit 945b4f7626962844c85f34bf6541ef35f9a200ea by David Rosca.
Committed on 14/03/2019 at 10:34.
Pushed by drosca into branch 'master'.

BookmarksIcon: Re-check bookmark when page url changes
FIXED-In: 3.1.0

M  +3    -0    src/lib/bookmarks/bookmarksicon.cpp

https://commits.kde.org/falkon/945b4f7626962844c85f34bf6541ef35f9a200ea