BookmarksIcon: Re-check bookmark when page url changes

BUG: 402239
FIXED-In: 3.1.0